[gd_scene load_steps=7 format=3 uid="uid://hbcxg6chypp7"]

[ext_resource type="Script" uid="uid://b4136hexwjn20" path="res://scripts/2_to_1_crafter.gd" id="1_gu073"]
[ext_resource type="Texture2D" uid="uid://codvli7pguf0a" path="res://assets/sprites/factory2.png" id="2_lt38q"]
[ext_resource type="LabelSettings" uid="uid://dnub4tguh08yg" path="res://assets/fonts/pixel font.tres" id="3_xe7ws"]
[ext_resource type="Texture2D" uid="uid://bt2pkyiwgwf06" path="res://assets/GUI/Input_materials_gui_double.png" id="4_xe7ws"]
[ext_resource type="Texture2D" uid="uid://drhk4fxj0yhkk" path="res://assets/GUI/Input_materials_gui_single.png" id="5_g6auc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vklko"]
size = Vector2(120, 120)

[node name="2to1crafter" type="Area2D"]
script = ExtResource("1_gu073")

[node name="Building sprite" type="Sprite2D" parent="."]
position = Vector2(64, 64)
scale = Vector2(4, 4)
texture = ExtResource("2_lt38q")

[node name="First input" type="Label" parent="."]
top_level = true
offset_left = 34.0
offset_top = -109.0
offset_right = 70.0
offset_bottom = -73.0
text = "10"
label_settings = ExtResource("3_xe7ws")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Second input" type="Label" parent="."]
top_level = true
offset_left = 28.0
offset_top = -68.0
offset_right = 80.0
offset_bottom = -32.0
text = "10"
label_settings = ExtResource("3_xe7ws")

[node name="Output" type="Label" parent="."]
top_level = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -530.0
offset_top = -181.0
offset_right = -480.0
offset_bottom = -145.0
grow_horizontal = 2
grow_vertical = 2
text = "10"
label_settings = ExtResource("3_xe7ws")
vertical_alignment = 1

[node name="Resource sprite" type="Sprite2D" parent="."]
scale = Vector2(4, 4)

[node name="Timer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(64, 64)
shape = SubResource("RectangleShape2D_vklko")

[node name="InputMaterialsGuiDouble" type="Sprite2D" parent="."]
position = Vector2(64, -64)
scale = Vector2(4, 4)
texture = ExtResource("4_xe7ws")

[node name="InputMaterialsGuiSingle" type="Sprite2D" parent="."]
position = Vector2(64, 192)
scale = Vector2(4, 4)
texture = ExtResource("5_g6auc")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_output_timer_timeout"]
